# trade-bot

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  README.rst  pyproject.toml  server.py
research/: README.txt
spikes/: deployment.md
tests/: test_trade_bot.py
trade_bot/: market_data.py
