[tool.poetry]
name = "trade-bot"
version = "0.1.0"
description = ""
authors = ["Angelo Aldecoa <angelokn14@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sanic = "^22.6.1"
websocket-client = "^1.3.3"
finnhub-python = "^2.4.14"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
poethepoet = "^0.16.0"
black = "^22.6.0"
pre-commit = "^2.20.0"
flake8 = "^5.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
dev = "sanic server.app --dev"
